syntax = "proto3";

import "data.proto";
import "user.proto";

// Require Go Package
option go_package = ".;models";

// [PLUGIN]
// Define ConnectedMessage Type: Public vars
message ConnectedMessage {
  string hostId = 1;
  Contact contact = 2;
  Profile profile = 3;
}

// [PLUGIN]
// Initial Request Message
message ErrorMessage {
  string message = 1;
  string method = 2;
}

// [PLUGIN]
// Initial Request Message
message RequestMessage {
  string olc = 1;
  string device = 2;
  Contact contact = 3;
}

// [CORE]
// Message Sent when peer has direction update to Lobby Topic
message LobbyMessage {
  string event = 1;
  string sender = 2;
  Peer data = 3;
}

// [CORE]
// Authorization message sent in stream
message AuthMessage {
  // Define Root Message
  Peer peer = 1;
  Subject subject = 2;
  Metadata metadata = 3;

  // Define Subject
  enum Subject {
    NONE = 0;
    REQUEST = 1;
    ACCEPT = 2;
    DECLINE = 3;
  }
}
